DBService, Country, Document, Word - DB 관련 클래스 추가, ConfigLoader - DB 관련 설정 내용 추가, ExcelService - 가중치 관련 메소드 추가